# RuPC

./: .gitignore  CMakeLists.txt  README.md
arduino/motor_control/: Makefile  motor_ctrl.c
executables/: CMakeLists.txt
executables/pendulum/: CMakeLists.txt  manual_control.cpp  pendulum_perception.cpp
src/comms/: CMakeLists.txt
src/comms/robust_serial/: robust_serial.cpp  robust_serial.hpp
